turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:4: error: illegal start of simple expression
val mvmt_suivant=0
^