turmites.lessons.turmites.helloturmite.HelloTurmite.scala.code
var state = 
val mvmt_suivant=0
val couleur_actuelle=0
val etat=0
val GAUCHE=2
val stop=0
val pas_de_virage=1
val demi_tour=4
val DROITE=8;

def step(colors:Array[Color], rule:Array[Array[Array[Int]]] ) {
  var couleurTrouve=false
  var i=0
  while (getCouleurSol!=colors(i)){
    i+=1
  }
  setCouleurBrosse(colors(rule(etat)(couleur_actuelle)))
  baisseBrosse()
  leveBrosse()
  mvmt_suivant=rule(etat)(couleur_actuelle)(mvmt_suivant)
  mvmt_suivant match {
    case GAUCHE => gauche(); avance()
    case DROITE => droite(); avance()
    case stop =>
    case pas_de_virage => avance()
    case demi_tour => droite();droite();avance()
  }
  mvt_suivant=rule(etat)(couleur_actuelle)(mvt_suivant)
  couleur_actuelle=rule(etat)(couleur_actuelle)
  etat=rule(etat)
}